larae page update

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -124,24 +124,25 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                LaRae Smith is a long-time Cumberland County resident and community-focused leader with a strong background in education, faith-based outreach, and public service. She has 
-                served on the Commercial Township Board of Education, chaired the township’s Land Use Board and Democratic Committee, and received recognition for her work in economic 
-                development, youth engagement, and family-centered programming.
+                LaRae Smith is a long-time Cumberland County resident with a well-rounded background in education, public service, and faith-based community work. She has served on the 
+                Commercial Township Board of Education, chaired the township’s Land Use Board and Democratic Committee, and earned recognition for her work in youth engagement, 
+                family support services, and local economic development.
                 <br>
                 <br>
-                Her current 2025 campaign is now beginning to take shape. Smith has released a detailed agenda outlining her priorities—such as transparent governance, expanded services for 
-                families and veterans, public transportation, and homelessness intervention—and she has agreed to a long-form interview to further clarify her views and proposals. This 
-                renewed effort marks a positive shift from earlier in the campaign cycle, when her platform was not publicly visible.
+                Among the three Democrats running for two open commissioner seats, Smith has emerged as the most proactive in reaching voters. She has published a comprehensive 
+                campaign platform focused on transparent governance, improved services for families and veterans, expanded public transportation, and efforts to address 
+                homelessness. In addition, she recorded a full-length interview and maintains a campaign website with upcoming event listings—offering voters multiple ways to 
+                learn about her background and positions.
                 <br>
                 <br>
-                While her campaign is gaining traction, there are still notable gaps in the broader Democratic Party infrastructure that limit voter access to candidate information. 
-                The county party website has no public event listings for any Democratic candidates—endorsed or otherwise—which makes it harder for residents to attend events, ask questions, 
-                or stay informed. Smith is not responsible for this issue, but like all candidates, she’s affected by it.
+                While Smith remains unendorsed by the county Democratic establishment, she has taken it upon herself to fill the gaps left by the party’s limited infrastructure. 
+                As of now, the county party’s website still contains no event listings or visibility support for any of its candidates—endorsed or unendorsed. Smith isn’t 
+                responsible for that institutional breakdown, but she has shown a willingness to rise above it and do the work independently.
                 <br>
                 <br>
-                Still, she stands out for taking recent initiative. With a compelling background and increasing public engagement, Smith is positioned to make her case to voters—especially in 
-                a primary where only three Democrats are running for two open seats. Continued visibility and follow-through will be key, but her current trajectory is a step in the right 
-                direction.
+                In a race where voter awareness remains low and basic candidate information is often hard to find, Smith’s transparency and consistency stand out. With two 
+                seats available and only three Democratic contenders, she is in strong position to advance to the general election. Her continued outreach and follow-through will 
+                be crucial in solidifying support, but so far, she has done more than most to earn the attention of engaged voters.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -158,10 +159,10 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                Larae Smith has continued to improve her transparency and accessibility this election season by corresponding directly with InformTheVoteNJ and participating in a full-length 
-                interview to discuss her background, agenda, and stance on key county issues. This level of engagement demonstrates a clear commitment to informing voters. To reach the highest 
-                standard of transparency, it would be beneficial for her to host or co-host well-advertised meet-and-greet events and to commit to participating in a candidates forum—should 
-                one become possible if/when other candidates also agree to attend.
+                Larae Smith has continued to improve her transparency and accessibility this election season by corresponding directly with InformTheVoteNJ, participating in a full-length 
+                interview to discuss her background, agenda, and stance on key county issues, and publishing her own website that includes her agenda and campaign events. This level of 
+                engagement demonstrates a clear commitment to informing voters. Throughout this campaign season she has gone from a relatively moderate visibility based on prior 
+                campaign seasons, to a full level of transparency based on our reasonable standards. Well done Larae.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -193,7 +194,7 @@
              <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
 
-                <a href="https://perellaandsmithforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">PRIOR Campaign Site</button></a>
+                <a href="https://www.laraesmith.org/#/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
                 <a href="https://www.facebook.com/larae.smith.125/?locale=et_EE" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
                 <a href="https://www.facebook.com/QBCSJ/videos/183645471369458" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Interview on Facebook</button></a>
                 
@@ -310,10 +311,10 @@
     </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average to Excellent</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Excellent</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_good.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
             
