--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -123,18 +123,27 @@
               <h6 class="page-title">Douglas Albrecht</h6>
               <p>          
 
-                Douglas Albrecht is a two-term Cumberland County Commissioner running for re-election. He brings a background in business and public service, with past roles on Vineland 
-                City Council and current leadership on various county-level boards and committees, including Finance, Recreation, the Library Board, and the Board of Elections. His public 
-                messaging often emphasizes fiscal conservatism, economic development, literacy, and commonsense solutions to county-wide issues.
+                Doug Albrecht is the longest-serving member of the Cumberland County Board of Commissioners and one of two Republican incumbents running unopposed in the 2025 
+                primary. His longstanding experience and familiarity with county operations make him a key figure in ongoing policy conversations—from budget negotiations to 
+                infrastructure projects.
                 <br>
                 <br>
-                Albrecht is a familiar face in the community and regularly attends the Republican organization’s bi-weekly breakfast events—offering consistent, in-person access to 
-                constituents. However, his campaign remains light on comprehensive public materials, with no formal website or detailed policy/agenda explanations currently available for the 
-                2025 race. Despite his visibility, voters without direct access to local events may struggle to clearly understand his full platform or how it compares to his opponents.
+                Recently, Albrecht distinguished himself by participating in a one-hour radio interview with InformTheVoteNJ, offering substantive answers on complex county matters 
+                such as the Nabb Avenue Extension and the Middle Mile Broadband initiative. Rather than relying on vague talking points, Albrecht addressed direct and sometimes 
+                uncomfortable questions with a level of candor that many voters rarely get to hear—especially from candidates not facing primary opposition. His willingness to 
+                participate in that format, and this early in the election cycle, reflects a notable commitment to transparency.
                 <br>
                 <br>
-                As it stands, Albrecht is more accessible than most—but still leaves room for improvement when it comes to transparency in the digital space. He appears to have a wealth of 
-                knowledge, it would be nice to have it comprehensively laid out.
+                At the same time, it's worth acknowledging a shift in one of the more consistent venues for Republican visibility: the bi-weekly GOP breakfasts. During my process 
+                for nearly two years, these gatherings operated as semi-formal, civic-minded meetings open to Democrats, independents, and members of the press. But following public 
+                critique of transparency issues in a local race, it was recently announced that press and Democrats would no longer be welcome. While the meetings still serve as a 
+                regular touchpoint for Republican insiders, this change narrows public access to candidates like Albrecht—making direct interviews and open forums even more 
+                important for reaching a broader audience.
+                <br>
+                <br>
+                Despite that shift, Albrecht has taken initiative. In a political environment where many campaigns remain vague or inaccessible, his participation in a long-form 
+                discussion helped unlock clarity on long-standing county projects and challenges. Voters may still have questions—but at least with Albrecht, they’re getting 
+                real answers early on with plenty of time until November to make the full picture clear.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -162,7 +171,7 @@
                 Given his access, experience, and community presence, Albrecht is well-positioned to not only offer a fully informed reelection case, he is uniquely positioned to help 
                 inform the public at large what is going on in county-level politics because it is our understanding that he is the longest serving commissioner. That knowledge could help 
                 voters cut through potential noise and help make meaningfully informed voting choices. 
-                At present, he receives an “average to above average” transparency rating, with the potential to reach the top tier by simply putting the extent of his knowledge out there 
+                At present, he receives an “above average” transparency rating, with the potential to reach the top tier by simply putting the extent of his knowledge out there 
                 so the county can clearly look it over when the general election comes in November.
                 <br>
                 <br>
@@ -364,7 +373,7 @@
     <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average to Above Average</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
@@ -377,15 +386,6 @@
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">05/24/25 - 8:30am</li>
-                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>  
     </details>
             
     <br>
