--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -124,20 +124,17 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a wide-ranging background in communications, education, agriculture, and government. She’s worked 
-                as a high school educator, former chief of staff in the State Senate, and the first executive director of Cumberland County Habitat for Humanity. She also comes from a 
-                multi-generational farming family and has been active in local boards and public service throughout her career.
+                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a multifaceted background in communications, agriculture, education, and public service. She’s worked as a high school teacher, 
+                chief of staff in the State Senate, and served as the first executive director of Cumberland County Habitat for Humanity. Her public messaging emphasizes a commitment to education, agriculture, mental 
+                health and addiction services, and community resilience.
                 <br>
                 <br>
-                Since taking office, she has focused on issues like education, agriculture, mental health, and addiction services.
+                Lods is frequently seen at community events and regularly attends Republican gatherings, including the bi-weekly party breakfasts—though those events have recently shifted in nature, limiting public 
+                access. Still, she maintains a steady public presence and has become increasingly active on Facebook, using the platform to share her work and highlight specific priorities.
                 <br>
                 <br>
-                Lods is visible in the community and regularly attends local Republican events where she is approachable and willing to engage. However, her campaign lacks a 
-                centralized platform or clear public documentation of her current stances, making it difficult for voters to get a comprehensive view of her priorities without attending 
-                in-person events.
-                <br>
-                <br>
-                Given her communications background, there’s an opportunity for her to help set a new standard for public-facing engagement—but that shift has yet to fully take shape.
+                That said, her campaign has yet to present a fully structured platform outlining her policy goals or current stances in one place. While her messaging has grown more specific over time, much of it 
+                remains spread across individual posts and public appearances, making it harder for voters to assess her full agenda at a glance.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -154,58 +151,28 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Victoria Groetsch-Lods is currently serving her first term on the Cumberland County Board of Commissioners and is seeking reelection. Her public bio highlights her deep 
-                community ties, a strong resume in public service, and a general focus on important issues like education, agriculture, and services for mental health and addiction. She also 
-                brings experience from prior legislative roles, having served as chief-of-staff in the state senate and as the first executive director of Cumberland County Habitat for 
-                Humanity.
+                Victoria Groetsch-Lods is visible in the community, regularly attends party events, and maintains a consistent online presence—but her transparency as a candidate remains average due to a lack of 
+                a fully comprehensive campaign site with stances on well known, ongoing issues. While she often speaks about welcoming press engagement and holds a degree in journalism, she has not responded to multiple 
+                outreach attempts for interviews or questionnaires—even after asking in person whether she's been receving our emails.
                 <br>
                 <br>
-                However, while her bio clearly shows that she is engaged and has a strong understanding of county operations, the messaging stops short of laying out a full, voter-friendly 
-                platform and action plan.
+                Adding to the confusion is the recent shift in accessibility of the bi-weekly Republican breakfasts. Once open to the press and other political affiliations, these events are now restricted to 
+                Republicans only, following public criticism of a primary race’s lack of visibility. This change not only limits the flow of public information but creates new uncertainty about what details from 
+                candidate speeches—such as those given by Lods—can be responsibly shared. For a voter relying on facts rather than impressions, this leaves significant blind spots.
                 <br>
                 <br>
-                She briefly states that she has championed issues like education and agriculture, but it’s unclear what progress has been made so far or what she plans to do next. For 
-                example:
-
-                <ul>
-                    <li>She mentions having helped maximize school funding in the past, but what is her plan to secure or improve funding moving forward?</li>
-
-                    <li>She notes that she has a “keen understanding” of how government layers work together to get things done—but what does that mean for voters today? Is she applying 
-                        that knowledge to current county challenges like broadband, housing, public health, or economic development?
-                    </li>
-                </ul>
-
+                To her credit, Lods has clearly been doing the work and staying engaged in local government. But here’s where the gap lies: social media posts and brief mentions in party newsletters are no substitute for 
+                a comprehensive campaign platform. Voters can’t be expected to piece together scattered updates from Facebook or recall remarks made four months ago at a breakfast meeting. As someone deeply 
+                involved in local transparency efforts, I believe voters deserve access to something centralized—an information packet or candidate hub that clearly outlines where a candidate stands on core county issues 
+                like the Middle Mile Broadband project, the Nabb Avenue Extension, county fiscal priorities, public health, and economic development.
                 <br>
                 <br>
-                She also references her role in stimulating economic development during her previous tenure in Trenton, which is certainly relevant—but again, there’s no detailed explanation 
-                of what that experience has translated into during her time as commissioner, or what she hopes to do next.
-
+                It’s also worth noting that Lods may be operating within constraints beyond her control. As part of an organized party ticket, campaign strategy may play a role in limiting individual engagement—even 
+                when a candidate may personally be more open. While that’s speculative, it’s a reasonable consideration given the dynamics at play in other local campaigns.
                 <br>
                 <br>
-                In short, Lods appears to be fully capable and already doing the work, which would make it all the more effective if she spelled out her ongoing priorities and how her skill 
-                set sets her apart from her challengers. Compared to her likely general election opponents:
-
-                <ul>
-                    <li>Capizola doesn’t even mention current issues in his public bio.</li>
-
-                    <li>Balicki references support for the arts, but not much more in terms of local policy.
-                    </li>
-
-                    <li>Smith has clearly laid out a full platform and sat down for an interview with us to clarify her platform.
-                    </li>
-                </ul>
-
-                <br>
-                <br>
-
-                If Lods clearly documented her vision in a centralized campaign website—complete with issue breakdowns, podcast-style interviews, and participation in events like candidate 
-                forums—she would make a very strong case for why she is not only already doing the job, but the obvious choice to continue doing it as well.
-
-                <br>
-                <br>
-
-                For now, she receives an “average” transparency rating—based on visible public presence and clear experience—but with a very reachable path to move into full transparency with 
-                just a bit more intention and structure.
+                In short: Lods appears capable, connected, and experienced—but until her campaign provides structured, accessible documentation of her plans and policy positions, her transparency rating remains 
+                “average”. The good news? With a few intentional steps—such as a candidate Q&A, issue page, or podcast-style interview—she could easily set herself apart as both qualified and accountable.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -274,15 +241,7 @@
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">05/24/25 - 8:30am</li>
-                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>  
+        
     </details>
             
      <div class="candidate-agenda">
