--- a/child_pages/cc-elections/Candidates/konawell.html
+++ b/child_pages/cc-elections/Candidates/konawell.html
@@ -124,15 +124,23 @@
               <h6 class="page-title">Chris Konawell</h6>
               <p>          
 
-                Chris Konawel is a Gloucester County Commissioner currently serving his first term, where he oversees the Department of Government Services. As a small business owner, 
-                he emphasizes job creation, economic growth, and limited government, drawing on his experience in the private sector and his involvement in automotive and real estate 
-                associations. He also supports Second Amendment rights.
+                Chris Konawel is a first-term Gloucester County Commissioner overseeing the Department of Government Services. A small business owner with experience in the automotive and real 
+                estate sectors, Konawel emphasizes job creation, economic growth, and limited government. He is also a vocal supporter of Second Amendment rights and has consistently aligned 
+                himself with grassroots Republican messaging.
                 <br>
                 <br>
-                While Konawel has not released a formal platform or maintained an active campaign website, he has made public statements during local Republican events. There, he 
-                criticized rising electricity costs—blaming Democratic energy policies pushed through the NJ Board of Public Utilities—and raised concerns about increasing crime in the 
-                state. He also spoke critically about Democratic gubernatorial candidates Ras J. Baraka and Steve Sweeney following a recent ICE-related incident, signaling a firm stance 
-                on immigration enforcement. However, the campaign still lacks consistent digital outreach, event promotion, and direct responses to voter inquiries.
+                While Konawel does not maintain a formal campaign website or structured platform, he has made his views known at Republican events—particularly at the bi-weekly GOP breakfasts. 
+                However, those gatherings recently shifted to exclude Democrats and members of the press, limiting public visibility into what used to be more accessible venues for civic engagement.
+                <br>
+                <br>
+                Recently, Konawel posted on Facebook about a serious ongoing issue in Gloucester County, sharing insights into how he’s working to address the matter. This kind of direct 
+                communication with constituents could signal the start of a more active campaign effort—especially given that he is currently running unopposed in the primary. That said, it’s too 
+                early to say for sure. Since InformTheVoteNJ only began covering his activity this year and has not yet fully reviewed his social media history, it remains unclear whether this 
+                post is part of a broader strategic push or simply a one-off moment of constituent outreach.
+                <br>
+                <br>
+                For now, while Konawel remains visible within his political circles, his public-facing campaign remains limited. A more structured platform, clearer digital communication, or 
+                participation in voter-facing interviews would go a long way in helping the broader electorate understand how he intends to lead moving forward.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -148,27 +156,33 @@
               <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">Chris Konawell</h6>
               <p>          
-                Chris Konawel, a Republican candidate for the New Jersey General Assembly in Legislative District 3, currently lacks a dedicated campaign website. His primary online presence is a 
-                Facebook page with limited information about his platform or public appearances. Efforts to engage with him through this channel have been unsuccessful—our message was left “on read” 
-                without a reply.
+                Chris Konawel, a Republican candidate for the New Jersey General Assembly in Legislative District 3, currently does not maintain a dedicated campaign website or centralized policy 
+                platform. His primary digital presence is a Facebook page that, while active, contains limited structured information about his legislative priorities or public schedule. An 
+                outreach message from InformTheVoteNJ was seen but left unanswered, and no alternative form of contact has been offered.
                 <br>
                 <br>
-                However, Konawel has made at least one public appearance during the campaign cycle, speaking briefly at a Republican breakfast event. While the speech was limited in scope, this 
-                effort to address voters directly does place him ahead of candidates who have made no public remarks at all. During that same event, he was approached by InformTheVoteNJ.com and 
-                asked if he would like to participate in our voter information process. He acknowledged the request but stated that such decisions are run through his campaign manager, offering 
-                no commitment or follow-up since.
+                Konawel has made at least one known public appearance during the 2025 campaign cycle, speaking briefly at a Republican breakfast event. While his remarks were general and 
+                campaign-lite, they at least placed him ahead of candidates who have made no public statements at all. During that same event, InformTheVoteNJ approached him directly to invite 
+                participation in our voter information process. He acknowledged the request but deferred to his campaign manager, with no follow-up or commitment since.
                 <br>
                 <br>
-                This confirms that Konawel is aware of the outreach and the opportunity to participate. Despite this, he has not taken steps to provide detailed platform information, respond to 
-                public inquiries, or participate in structured transparency efforts such as interviews, issue surveys, or forums.
+                While Konawel recently used Facebook to update constituents on a serious county issue, it’s unclear whether that post marks the beginning of more robust campaign outreach or was 
+                simply a moment of situational responsiveness. Since we only began tracking him this year and have not fully reviewed his posting history, the pattern is not yet clear.
                 <br>
                 <br>
-                Note: While this remains the primary election phase, all four candidates in LD-3 (two Democrats, two Republicans) are running unopposed and are expected to advance to the general 
-                election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. We continue to 
-                encourage all candidates to take advantage of this head start.
+                Adding to the challenge is the recent shift in access to the bi-weekly Republican breakfasts, which have traditionally served as a consistent space for GOP candidates to 
+                communicate with the public. These events are now closed to Democrats and members of the press, narrowing visibility into what used to be an informal window into candidate 
+                thinking. For candidates like Konawel—who have no campaign website, no structured platform, and no open interview participation—this restriction further limits what voters can 
+                learn unless they’re already within the party’s inner circle.
                 <br>
                 <br>
-                Given his limited online engagement but partial public visibility, Konawel currently receives a low-to-below-average rating for transparency and accessibility.
+                All four candidates in LD-3 (two Republicans and two Democrats) are currently running unopposed in the primary, meaning they are all expected to appear on the general election 
+                ballot. This gives each of them a valuable opportunity to begin communicating their platforms early and clearly. So far, Konawel has not taken meaningful steps in that direction.
+                <br>
+                <br>
+                Given the limited online engagement, lack of follow-up to outreach, and minimal public platform details, Konawel currently receives a “low-to-below-average” transparency rating. 
+                A more structured digital presence, public response to outreach, or participation in interview-based voter education efforts could substantially improve that score heading into 
+                the general election.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -226,10 +240,16 @@
          </div>
      </div>
 
-     
+     <br>
+     <br>
+
+     <a href="https://www.facebook.com/share/v/1DzUhgErD8/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Recent Facebook Video Update</button></a>
+
+     <br>
+     <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low to Below Average</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Below Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
