social banner index page

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -136,6 +136,15 @@
                     <li class="location">Check where your voting location is</li>
                 </ul>
             </div>            
+
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Millville School Board Meeting</strong></li>
+                    <li class="description">Find out what's going on in Millville's Schools</li>
+                    <li class="date-and-time">06/16/25</li>
+                    <li class="location">110 N. 3rd Street, Millville, NJ 08302</li>
+                </ul>
+            </div>   
             
         </div>
     </div>
