--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
     </head>
 <body>    
 
+    <div class="top-social-banner">
+
+      <p style="margin-right: 20px; font-weight: bold;">Connect with us:</p>
+      
+      <a class="social-icon-link" href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank">
+          <img alt="Facebook" class="social-icon" src="assets/facebook.svg"/>
+          <div class="social-label">Facebook</div>
+      </a>
+      <a class="social-icon-link" href="https://www.youtube.com/@InformTheVoteNJ" target="_blank">
+          <img alt="YouTube" class="social-icon" src="assets/youtube.svg"/>
+          <div class="social-label">YouTube</div>
+      </a>
+      <a class="social-icon-link" href="https://informthevotenj.substack.com/subscribe" target="_blank">
+          <img alt="Substack Newsletter" class="social-icon" src="assets/email-newsletter.svg"/>
+          <div class="social-label">Email Updates</div>
+      </a>
+   </div>
+
     <div class="menu-wrap menu-wrap-homepage">
         <input type="checkbox" autocomplete='off' id="toggler" class="toggler">
         <div class="hamburger">
