social banner attempt 2

--- a/index.html
+++ b/index.html
@@ -43,25 +43,22 @@
         gtag('config', 'G-64FQD2P8BV');
     </script>
     </head>
+
+
 <body>    
 
     <div class="top-social-banner">
-
-      <p style="margin-right: 20px; font-weight: bold;">Connect with us:</p>
-      
-      <a class="social-icon-link" href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank">
-          <img alt="Facebook" class="social-icon" src="assets/facebook.svg"/>
-          <div class="social-label">Facebook</div>
+      <span class="social-label">Connect:</span>
+      <a href="https://www.facebook.com/people/Inform-the-Vote-NJ/61558980497931/" target="_blank" class="social-icon-link" aria-label="Facebook">
+          <img src="assets/facebookLogo.png" alt="Facebook" class="social-icon" />
       </a>
-      <a class="social-icon-link" href="https://www.youtube.com/@InformTheVoteNJ" target="_blank">
-          <img alt="YouTube" class="social-icon" src="assets/youtube.svg"/>
-          <div class="social-label">YouTube</div>
+      <a href="https://www.youtube.com/@InformTheVoteNJ" target="_blank" class="social-icon-link" aria-label="YouTube">
+          <img src="assets/youtubeIcon.png" alt="YouTube" class="social-icon" />
       </a>
-      <a class="social-icon-link" href="https://informthevotenj.substack.com/subscribe" target="_blank">
-          <img alt="Substack Newsletter" class="social-icon" src="assets/email-newsletter.svg"/>
-          <div class="social-label">Email Updates</div>
+      <a href="https://informthevotenj.substack.com/subscribe" target="_blank" class="social-icon-link" aria-label="Email Updates via Substack">
+          <img src="assets/substackIcon.png" alt="Substack Newsletter" class="social-icon" />
       </a>
-   </div>
+    </div>
 
     <div class="menu-wrap menu-wrap-homepage">
         <input type="checkbox" autocomplete='off' id="toggler" class="toggler">
